syntax = "proto3";

option go_package = "pb/api";

import "google/protobuf/timestamp.proto";

// GET NEWS
message GetNewsRequest {
  int32 page = 1;
}

message GetNewsResponse{
  Status status = 1;
  repeated NewsCard data = 2;
}

message Status {
  string code = 1;
  string message = 2;

}

// BEGIN Создание карточки новости
message CreateNewsCardRequest{
  string title = 2;
  string image = 3;
  string type = 4; //Пока что константой заполняем
}

message CreateNewsCardResponse{
  Status status = 1;
  int32 id = 2;
}
// END Создание карточки новости


// BEGIN
message CreateNewsDetailsRequest{
  repeated NewsDetails data = 1;
  int32 news_id = 2;
}

message CreateNewsDetailsResponse{
  Status status = 1;
}

// END


message NewsCard{
  int32 id = 1;
  string title = 2;
  string image = 3;
  string type = 4;
  google.protobuf.Timestamp created_at = 5;
}

message NewsDetails {
  int32 id = 1;
  string title = 2;
  string image = 3;
  string type = 4;
  int32 swipe_delay = 5;
}


message DBTrack {
  google.protobuf.Timestamp date = 1;
  string date_string = 2;
  bool done = 3;
  int64 last_series = 4;
  int64 score = 5;
  int64 score_daily = 6;
}
