syntax = "proto3";

option go_package = "pb/api";

import "api/message.proto";

package pb;

service NewsService {
    rpc GetNews(GetNewsRequest) returns (GetNewsResponse){}
    rpc AddNewsCard(CreateNewsCardRequest) returns (CreateNewsCardResponse){}
    rpc AddNewsDetails(CreateNewsDetailsRequest) returns (CreateNewsDetailsResponse){}
    rpc GetNewsDetails(GetNewsDetailsRequest) returns (GetNewsDetailsResponse){}
}